fix 2 spacing issues, fix opac-browse display

--- a/catalog-scss/_mastheadsearch.scss
+++ b/catalog-scss/_mastheadsearch.scss
@@ -45,12 +45,6 @@ input[type='text']:focus {
 // larger search box on home page
 #opac-main {
     .mastheadsearch {
-        text-align: center;
-
-        input[type='text'] {
-            height: 28px;
-        }
-
         // hide other search form elements
         label,
         select {
